criação da relação entre unidade administrativa e tipo de unidade administrativa