@@ -1,5 +1,21 @@
 package br.edu.ufape.sgi.comunicacao.controllers;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.modelmapper.ModelMapper;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import br.edu.ufape.sgi.comunicacao.dto.TipoUnidadeAdministrativa.TipoUnidadeAdministrativaRequest;
 import br.edu.ufape.sgi.comunicacao.dto.TipoUnidadeAdministrativa.TipoUnidadeAdministrativaResponse;
 import br.edu.ufape.sgi.exceptions.TipoUnidadeAdministrativaDuplicadoException;
@@ -8,13 +24,6 @@ import br.edu.ufape.sgi.fachada.Fachada;
 import br.edu.ufape.sgi.models.TipoUnidadeAdministrativa;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -44,9 +53,19 @@ public class TipoUnidadeAdministrativaController {
     }
 
     @GetMapping
-    public List<TipoUnidadeAdministrativaResponse> listar() {
-        return fachada.listarTipos().stream().map(tipoUnidadeAdministrativa -> new TipoUnidadeAdministrativaResponse(tipoUnidadeAdministrativa, modelMapper)).toList();
+    public ResponseEntity<List<TipoUnidadeAdministrativaResponse>> listar() {
+        List<TipoUnidadeAdministrativa> tipos = fachada.listarTipos();
+        List<TipoUnidadeAdministrativaResponse> response = tipos.stream()
+                .map(tipo -> new TipoUnidadeAdministrativaResponse(tipo, modelMapper))
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
+    /*@GetMapping
+    public List<TipoUnidadeAdministrativaResponse> listar() {
+        return fachada.listarTipos().stream()
+        .map(tipoUnidadeAdministrativa -> new TipoUnidadeAdministrativaResponse(tipoUnidadeAdministrativa, modelMapper))
+        .toList();
+    }*/
 
     @PreAuthorize("hasRole('ADMINISTRADOR')")
     @DeleteMapping("/{id}/deletar")
